# NN_FabKit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  update.json
app-desktop/: README.md
app-desktop/nc-export/: README.md  pyproject.toml
app-desktop/nc-export/examples/: hello-surface_w40_l600__v0.2.0-brep.igs  rect-tube-box_40x20x2_L600__v0.2.0-brep.igs  rect-tube-hole-y-plus_40x20x1.5_L600_h200_z0_r4__v0.4.1-prototype.igs  rect-tube-hollow-mitre-45_40x20x1.5_L600__v0.4.1-proper.igs  rect-tube-mitre-45_40x20_L600__v0.4.1-prototype.igs  rect-tube_40x20x1.5_L600__v0.4.1-hollow.igs  rect-tube_40x20x2_L600__v0.3.0-noradius.igs  rect-tube_40x20x2_L600__v0.3.0-rounded.igs  rect-tube_40x20x2_L600__v0.4.0-hollow.igs  rect-tube_40x20x2_L600__v0.4.0-rounded.igs  rect-tube_40x20x2_L600__v0.4.1-hollow.igs  rect-tube_40x20x2_L600__v0.4.1-rounded.igs  rect-tube_60x10x1.5_L992_R2.25__v0.3.0-mimic-ref.igs  rect-tube_60x10x1.5_L992_R2.25__v0.4.0-mimic-reference.igs  rect-tube_60x10x1.5_L992_R2.25__v0.4.1-mimic-reference.igs  truba-40x20x2-L989.igs
app-desktop/nc-export/src/nn_fabkit_nc_export/: __init__.py  cli.py
app-desktop/nc-export/src/nn_fabkit_nc_export/iges/: __init__.py  document.py  entities.py  format.py
app-desktop/nc-export/src/nn_fabkit_nc_export/tube/: __init__.py  rect_tube.py
app-desktop/nc-export/tests/: test_document.py  test_format.py  test_hello_surface.py  test_rect_tube.py
corpus/: README.md
docs/: PRODUCT_VISION.md
mcp-bridge/: README.md  pyproject.toml
mcp-bridge/src/nn_fabkit_mcp/: __init__.py  __main__.py  server.py  transport.py
(+64 files in other folders)
