[project]
name = "nn-fabkit-mcp"
version = "0.1.0"
description = "MCP bridge to a running NN FabKit SketchUp plugin (TCP transport)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "NN FabKit" }]
keywords = ["sketchup", "mcp", "claude", "nn-fabkit"]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ra-artnft/NN_FabKit"
Repository = "https://github.com/ra-artnft/NN_FabKit"
Issues = "https://github.com/ra-artnft/NN_FabKit/issues"

[project.scripts]
nn-fabkit-mcp = "nn_fabkit_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nn_fabkit_mcp"]
